feat: 添加部分账号管理 将 MinecraftLauncher 改为多实例

--- a/PCL-Mac/Info.plist
+++ b/PCL-Mac/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>$(CLIENT_ID)</string>
+	<string>c14b0370-8d75-42f8-b329-5b60d39e319f</string>
 	<key>IS_DEVELOPMENT</key>
 	<string>$(IS_DEVELOPMENT)</string>
 	<key>NSAppTransportSecurity</key>
