--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Build Universal Binary (xcodebuild)
         run: |
-          PROJECT="PCL-Mac.xcodeproj"
-          SCHEME="PCL-Mac"
+          PROJECT="PCL.Mac.xcodeproj"
+          SCHEME="PCL.Mac"
 
           if [ -d "$PROJECT" ]; then
             xcodebuild -project "$PROJECT" -scheme "$SCHEME" -configuration Release \
@@ -44,32 +44,32 @@ jobs:
               ARCHS="arm64 x86_64" ONLY_ACTIVE_ARCH=NO \
               CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO build
           else
-            echo "PCL-Mac.xcodeproj not found!"
+            echo "PCL.Mac.xcodeproj not found!"
             exit 1
           fi
 
       - name: Find and copy .app to build/Release
         run: |
           mkdir -p build/Release
-          APP_PATH=$(find ~/Library/Developer/Xcode/DerivedData/ -type d -path "*/Build/Products/Release/PCL-Mac.app" | head -n 1)
+          APP_PATH=$(find ~/Library/Developer/Xcode/DerivedData/ -type d -path "*/Build/Products/Release/PCL.Mac.app" | head -n 1)
           if [ -d "$APP_PATH" ]; then
             cp -R "$APP_PATH" build/Release/
           else
-            echo "PCL-Mac.app not found!"
+            echo "PCL.Mac.app not found!"
             exit 1
           fi
 
       - name: Verify Universal Binary
         run: |
-          file build/Release/PCL-Mac.app/Contents/MacOS/PCL-Mac
+          file build/Release/PCL.Mac.app/Contents/MacOS/PCL.Mac
 
-      - name: Zip PCL-Mac.app
+      - name: Zip PCL.Mac.app
         run: |
           cd build/Release
-          zip -r PCL-Mac.zip PCL-Mac.app
+          zip -r PCL.Mac.zip PCL.Mac.app
 
       - name: Archive build products
         uses: actions/upload-artifact@v4
         with:
-          name: PCL-Mac
-          path: build/Release/PCL-Mac.zip
+          name: PCL.Mac
+          path: build/Release/PCL.Mac.zip
